[package]
name = "nft_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.4.3", features = ["full"] }
tonic = "0.12.3"
prost = "0.13"
prost-types = { version = "0.13", features = ["std"] }
# protobuf = "3.7.1"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"